--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -22,7 +22,7 @@
 	<ul>	
 	 {% for episode in season.episodes %}
 	 
-	 <li><a href="" >Episode {{ episode.number }} : {{episode.title}}</a></li>
+	 <li><a href="{{ path('program_episode_show', {program: program.id, season: season.id, episode: episode.id}) }}" >Episode {{ episode.number }} : {{episode.title}}</a></li>
 	 {% endfor %}
 	</ul>
 	<a href="{{ path('program_index') }}">
