--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,23 +1,26 @@
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid d-flex flex-row justify-content-end">
+    <a class="navbar-brand logo" href="#">Wild Séries</a>
+    
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link navLink" aria-current="page" href="/category">Catégories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link navLink" href="/">Acteurs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link navLink" href="/program">Séries</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link navLink" href="/">Mes favories</a>
         </li>
       </ul>
+
+      <a href="#" class="nav-link navLink">Connexion</a>
     </div>
   </div>
 </nav>
