--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
 
 		<script src="/build/app.js"></script>
 		{# Run `composer require symfony/webpack-encore-bundle`
-						           and uncomment the following Encore helpers to start using Symfony UX #}
+								           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -25,5 +25,6 @@
 			{% include '_navbar.html.twig' %}
 		</header>
 		{% block body %}{% endblock %}
+		{% include '_footer.html.twig'%}
 	</body>
 </html>
