validation program form

--- a/templates/_card.html.twig
+++ b/templates/_card.html.twig
@@ -1,8 +1,9 @@
-
-	<div class="card card-cat mb-3 moment col-lg-4">
-		<div class="row">
-			<div class="col-lg-6 d-flex justify-content-center align-items-center">
-				<img class="card-img-top" src="{{ programs.0.poster }}" alt="Card image cap">
+<div class="container col-lg-4 offset-lg-1">
+<h2 class="my-4">En ce moment</h2>
+	<div class="card card-cat mb-3 mx-0 moment ">
+		<div class="row height-card">
+			<div class="col-lg-6 d-flex justify-content-center align-items-center card-content">
+				<img class="card-img-top image" src="{{ programs.0.poster }}" alt="Card image cap">
 			</div>
 			<div class="col-lg-6 text-column">
 				<div class="card-body">
@@ -14,4 +15,4 @@
 			</div>
 		</div>
 	</div>
-
+</div>
