--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -10,7 +10,7 @@
 				<i class="fab fa-twitter"></i>
 			</a>
 			<a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark">
-				<i class="fab fa-instagram"></i>
+				<i class="fab fa-instagram" style="font-size: 2rem; color: cornflowerblue;"></i>
 			</a>
 
 
