--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
 		<header>
 			{% include '_navbar.html.twig' %}
 		</header>
+		{% include '_banner.html.twig' %}
 		{% block body %}{% endblock %}
 		{% include '_footer.html.twig'%}
 	</body>
