--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,7 +11,7 @@ $titleSize        :45px;
 $navSize          :35px;
 $textSize         : 20px;
 
-
+@import url('home.scss');
 @import "~bootstrap/scss/bootstrap";
 
 body {
@@ -50,7 +50,7 @@ body {
 
 .banner {
     background-image: radial-gradient(gray 25%, $thirdColor 75%);
-    height    : 350px;
+    height          : 350px;
 
 }
 
@@ -66,6 +66,20 @@ body {
     }
 }
 
+.image{
+  
+    height    : 100%;
+    object-fit: cover;
+}
+
+.height-card {
+    height: 300px;
+}
+
+.card-content {
+    height: 100%;
+}
+
 .card {
-    background-color: $secondary;
+    border: none;
 }
