--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -26,7 +26,7 @@
 	<ul>
 		{% for season in seasons %}
 			<li>
-				<a href="{{ path('program_season_show', {program: season.program.id, season: season.id}) }}">{{ season.description }}</a>
+				<a href="{{ path('program_season_show', {program: season.program.id, season: season.id}) }}">Saison {{ season.number }}</a>
 			</li>
 		{% endfor %}
 	</ul>
@@ -37,5 +37,16 @@
 		Retour à la liste des programmes
 
 	</a>
+
+	<strong>Acteur :</strong>
+	<ul>
+		{% for actor in program.actors %}
+			<li><a href="{{ path("actor_show", { id: actor.id }) }}">{{actor.name}}</a></li>
+		{% else %}
+			<li>
+				Aucun acteur pour cette série
+			</li>
+		{% endfor %}
+	</ul>
 
 {% endblock %}
