--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -26,27 +26,34 @@
 	<ul>
 		{% for season in seasons %}
 			<li>
-				<a href="{{ path('program_season_show', {program: season.program.id, season: season.id}) }}">Saison {{ season.number }}</a>
+				<a href="{{ path('program_season_show', {program: season.program.id, season: season.id}) }}">Saison
+					{{ season.number }}</a>
 			</li>
 		{% endfor %}
 	</ul>
+	{% if is_granted("ROLE_ADMIN") %}
 
+		<a href="{{ path('program_edit', { 'slug': program.slug} ) }}">Éditer</a>
 
-	<a href="{{ path('program_index') }}">
+		{%endif%}
 
-		Retour à la liste des programmes
+		<a href="{{ path('program_index') }}">
 
-	</a>
+			Retour à la liste des programmes
 
-	<strong>Acteur :</strong>
-	<ul>
-		{% for actor in program.actors %}
-			<li><a href="{{ path("actor_show", { id: actor.id }) }}">{{actor.name}}</a></li>
-		{% else %}
-			<li>
-				Aucun acteur pour cette série
-			</li>
-		{% endfor %}
-	</ul>
+		</a>
 
-{% endblock %}
+		<strong>Acteur :</strong>
+		<ul>
+			{% for actor in program.actors %}
+				<li>
+					<a href="{{ path("actor_show", { id: actor.id }) }}">{{actor.name}}</a>
+				</li>
+			{% else %}
+				<li>
+					Aucun acteur pour cette série
+				</li>
+			{% endfor %}
+		</ul>
+
+	{% endblock %}
