--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,26 +1,36 @@
-
-
 <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid d-flex flex-row justify-content-end">
-    <a class="navbar-brand logo" href="#">Wild Séries</a>
-    
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link navLink" aria-current="page" href="/category">Catégories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navLink" href="/">Acteurs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navLink" href="/program">Séries</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navLink" href="/">Mes favories</a>
-        </li>
-      </ul>
+	<div class="container-fluid d-flex flex-row justify-content-end">
+		<a class="navbar-brand logo" href="#">Wild Séries</a>
 
-      <a href="#" class="nav-link navLink">Connexion</a>
-    </div>
-  </div>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link navLink" aria-current="page" href="/category">Catégories</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link navLink" href="/">Acteurs</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link navLink" href="/program">Séries</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link navLink" href="/">Mes favories</a>
+				</li>
+			</ul>
+
+			{% if app.user %}
+
+				{{ app.user.email }}
+
+				<a href="{{ path('app_logout') }}">
+					Se déconnecter</a>
+
+			{% else %}
+
+				<a href="{{ path('login') }}">
+					Se connecter</a>
+
+			{% endif %}
+		</div>
+	</div>
 </nav>
