--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Episode {{ episode.number}}
+{% block title %}Episode
+	{{ episode.number}}
 {% endblock %}
 
 
@@ -11,16 +12,32 @@
 
 		<div class="media-body">
 
-			<h1 class="mt-0">Saison {{ season.number }} de {{ program.title }}</h1>
+			<h1 class="mt-0">Saison
+				{{ season.number }}
+				de
+				{{ program.title }}</h1>
 
-			<h2>Episode {{ episode.number}} - {{episode.title}}</h2>
+			<h2>Episode
+				{{ episode.number}}
+				-
+				{{episode.title}}</h2>
 
 			<p>{{ episode.synopsis }}</p>
 
 		</div>
 
 	</div>
-	
+	{% if app.user %}
+		{{ form_start(form) }}
+
+		{{ form_widget(form) }}
+
+		<button type="submit">Add comment</button>
+
+		{{ form_end(form) }}
+
+	{% endif %}
+
 	<a href="{{ path('program_season_show', {program: program.id, season: season.id}) }}">
 
 		Retour à la liste des épisodes
