--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
 
 		<script src="/build/app.js"></script>
 		{# Run `composer require symfony/webpack-encore-bundle`
-								           and uncomment the following Encore helpers to start using Symfony UX #}
+										           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -25,6 +25,19 @@
 			{% include '_navbar.html.twig' %}
 		</header>
 		{% include '_banner.html.twig' %}
+		{% for category, messages in app.flashes %}
+
+			{% for message in messages %}
+
+				<div class="alert alert-{{ category }}">
+
+					{{ message }}
+
+				</div>
+
+			{% endfor %}
+
+		{% endfor %}
 		{% block body %}{% endblock %}
 		{% include '_footer.html.twig'%}
 	</body>
